--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
         </div>
     </div>
     <div class="body">
-        <h1>Welcome to Kita foundations</h1>
-        <p style="color: white;">We transform tree to funiture</p>
+        <div class="him">
+            <div class="img">
+                <h1>Welcome to Kita foundations</h1>
+                <p>We transform tree to funiture</p>
+            </div>
+        </div>
         <div class="steps">
             <div class="ste">
                 <div class="txt">
